# agent

./: .gitignore  AGENTS.md  README.md  tauri.conf.json.bak
.github/: dependabot.yml
docs/: runtime-version-manager-design.md
scripts/: checkpoint.mjs  checkpoint.ps1  finish-session.mjs  session-finish.ps1  session-start.ps1  start-session.mjs
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  commands_provider.rs  config.rs  error.rs  keychain.rs  lib.rs  main.rs  state.rs
src-tauri/src/agent/: loop.rs  mod.rs
src-tauri/src/api/: anthropic.rs  mod.rs  openai.rs  provider.rs  rig.rs  types.rs  util.rs
src-tauri/src/commands/: conversation.rs  environment.rs  execution.rs  lifecycle.rs  mcp.rs  memory.rs  mod.rs  model.rs  orchestrator.rs  persona.rs  pipeline.rs  project.rs  prompt.rs  provider.rs  session.rs  settings.rs  skill.rs  tool.rs  window.rs
src-tauri/src/critic/: agent.rs  mod.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs
src-tauri/src/environment/: alias.rs  cli.rs  detector.rs  http_client.rs  installer.rs  lifecycle.rs  manager.rs  manager_detector.rs  manager_executor.rs  manifest.rs  mod.rs  node_integration.rs  node_toolchain.rs  project.rs  registry.rs  resolver.rs  upgrade.rs
src-tauri/src/environment/sources/: bun.rs  deno.rs  go.rs  java.rs  mod.rs  node.rs  python.rs  ruby.rs  rust.rs
src-tauri/src/execution/: mod.rs  pipeline_adapter.rs  planner.rs  runtime.rs  types.rs
src-tauri/src/intent/: classifier.rs  mod.rs  router.rs
src-tauri/src/lifecycle/: archiver.rs  compactor.rs  config.rs  mod.rs  summarizer.rs  titler.rs
src-tauri/src/mcp/: bridge.rs  config.rs  manager.rs  mod.rs
src-tauri/src/memory/: mod.rs  seeds.rs  vector_index.rs
src-tauri/src/orchestrator/: agent.rs  dispatcher.rs  event_bridge.rs  mod.rs  pipeline_adapter.rs  plan_error.rs  plan_types.rs  planner.rs  runtime.rs  task_graph.rs
src-tauri/src/persona/: mod.rs  seeds.rs
src-tauri/src/pipeline/: engine.rs  mod.rs  models.rs  scanner.rs
src-tauri/src/skills/: loader.rs  market.rs  mod.rs  scanner.rs
src-tauri/src/tools/: calculator.rs  code_executor.rs  file_system.rs  mod.rs  registry.rs  run_workflow.rs  script_tool.rs  trait.rs  web_search.rs
src-tauri/src/workers/: code_editor.rs  code_explorer.rs  mcp_bridge.rs  memory.rs  mod.rs  shell.rs  thinker.rs  web.rs
src-tauri/src/workspace/: git.rs  indexer.rs  mod.rs  search.rs  watcher.rs
src-tauri/tests/: project_detector_tests.rs  runtime_cli_tests.rs  runtime_tests.rs  tool_calculator.rs
src-ui/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  (+2 more)
(+121 files in other folders)
