[package]
name = "agent"
version = "0.1.0"
description = "Cross-platform AI Agent Client"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agent"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
futures = "0.3"
config = { version = "0.14", features = ["toml"] }
regex = "1"
urlencoding = "2.1"
keyring = { version = "3", default-features = false, features = ["windows-native"] }
rmcp = { version = "1", default-features = false, features = ["client", "transport-child-process"] }
tokio-cron-scheduler = "0.15"
zip = "2"
tar = "0.4"
flate2 = "1.0"
semver = { version = "1.0", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
# Rig AI framework — provider adapter + extractor
rig = "0.37"
schemars = "1.2"

[dev-dependencies]
tempfile = "3"

